<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Especie extends Model
{
    use HasFactory;

    protected $primaryKey = 'IdEspcie';
    protected $fillable = [
        'Nombre',
        'Descripcion',
    ];

    public function Animal()
    {
        return $this->hasMany(Animal::class, 'IdEspecie');
    }
}
